--- a/res/layout/terminal_and_2rails.xml
+++ b/res/layout/terminal_and_2rails.xml
@@ -16,6 +16,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="0dp"
             android:background="@drawable/button_add"
             android:text="@string/add"
             android:textSize="12sp"
@@ -28,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="28dp"
         android:orientation="horizontal" >
 
         <com.terrytec.brokenrailmonitor.Rail
@@ -52,7 +53,7 @@
             android:layout_marginBottom="-13dp"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:background="#00000000"
             android:contentDescription="@string/description"
             android:src="@drawable/connect_error"
@@ -62,11 +63,11 @@
             android:id="@+id/terminal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="0dp"
-            android:gravity="center" >
+            android:gravity="top" >
         </com.terrytec.brokenrailmonitor.Terminal>
     </LinearLayout>
 
@@ -75,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="28dp"
         android:orientation="horizontal" >
 
         <com.terrytec.brokenrailmonitor.Rail
@@ -96,6 +97,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/button_add"
             android:padding="0dp"
             android:text="@string/delete"
