添加弹出窗口。

--- a/res/layout/tabhome.xml
+++ b/res/layout/tabhome.xml
@@ -34,18 +34,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/tvClientID"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/client_id_background"
-            android:gravity="center"
-            android:padding="0dp"
-            android:text="@string/zero"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:textStyle="bold" >
-        </TextView>
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/tvClientID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/client_id_background"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="@string/zero"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textStyle="bold" >
+            </TextView>
+
+            <Button
+                android:id="@+id/btnPop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/right" >
+            </Button>
+        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
