--- a/res/layout/tabhome.xml
+++ b/res/layout/tabhome.xml
@@ -21,23 +21,16 @@
         title:title_text_color="@color/white" >
     </com.terrytec.brokenrailmonitor.CustomTitleBar>
 
-    <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:gravity="center"
-        android:orientation="horizontal" >
-	</LinearLayout>
-    -->
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
 
         <LinearLayout
+            android:id="@+id/llFunctionButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/tvClientID"
@@ -58,13 +51,23 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/right" >
             </Button>
+
+            <Button
+                android:id="@+id/btnTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_background"
+                android:text="Test" >
+            </Button>
         </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:gravity="center" >
+            android:gravity="center" 
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/llFunctionButtons">
 
             <LinearLayout
                 android:layout_width="match_parent"
