添加铁轨超时，以及持续干扰的情况；处理数据添加设置铁轨。

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -20,5 +20,6 @@
     <color name="orange">#ffffa500</color>
     <color name="buttoncolor">#ff0E8DB0</color>
     <color name="clientidcolor">#ff0088ff</color>
+    <color name="royalblue1">#ff4876FF</color>
 
 </resources>
