--- a/res/layout/terminal_and_2rails.xml
+++ b/res/layout/terminal_and_2rails.xml
@@ -34,7 +34,7 @@
         <TextView
             android:id="@+id/tvRailStressLeft"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvRailTemperatureLeft"
@@ -87,6 +87,13 @@
             android:layout_marginTop="0dp"
             android:gravity="top" >
         </com.terrytec.brokenrailmonitor.Terminal>
+
+        <TextView
+            android:id="@+id/tvMCTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+        </TextView>
     </LinearLayout>
 
     <LinearLayout
@@ -114,7 +121,7 @@
         <TextView
             android:id="@+id/tvRailStressRight"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvRailTemperatureRight"
