--- a/res/layout/window_password.xml
+++ b/res/layout/window_password.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@android:color/white"
+    android:layout_width="500dp"
+    android:layout_height="400dp"
+    android:background="@android:color/darker_gray"
     android:orientation="vertical" >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/inputPwd" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:inputType="textPassword"
         android:labelFor="@id/etPassword" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal" >
 
         <Button
@@ -30,6 +43,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:background="@drawable/button_background"
             android:text="@string/cancel" />
     </LinearLayout>
