--- a/res/layout/window_get_date_time.xml
+++ b/res/layout/window_get_date_time.xml
@@ -97,12 +97,21 @@
             android:gravity="center" />
     </GridLayout>
 
+    <Button
+        android:id="@+id/btnToNow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/button_background"
+        android:text="@string/ToNow" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal" >
 
         <Button
