将第三个tab历史换成数据，包括图标

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -116,7 +116,7 @@
            	    android:id="@+id/tvHistory"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
-           	    android:text="@string/history"
+           	    android:text="@string/data"
            	    android:textColor="@drawable/tab_textview" />
         </LinearLayout>
     </LinearLayout>
