添加dataFragment内部逻辑，可以切换Tab标题；添加了几个Fragment基类和派生类；添加了一些无用的fragment.xml。

--- a/res/layout/tabhistory.xml
+++ b/res/layout/tabhistory.xml
@@ -122,7 +122,7 @@
     </GridLayout>
 
     <com.terrytec.brokenrailmonitor.MyViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/viewPagerData"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
