--- a/res/layout/fragment_chart.xml
+++ b/res/layout/fragment_chart.xml
@@ -12,7 +12,7 @@
         android:background="@color/white"/>
 
     <lecho.lib.hellocharts.view.LineChartView
-        android:id="@+id/lcvTemperature"
+        android:id="@+id/lcvChart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffffffff" />
