--- a/res/layout/activity_popwindow.xml
+++ b/res/layout/activity_popwindow.xml
@@ -12,14 +12,14 @@
         android:background="@drawable/button_background"
         android:text="@string/subscribe" />
 
-   <!--  <Button
-        android:id="@+id/save"
+    <Button
+        android:id="@+id/btnTest"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_background"
-        android:text="@string/save" />
+        android:text="@string/test" />
 
-    <Button
+     <!--<Button
         android:id="@+id/close"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
