为了给丰台科工委报告配图，做了以下修改：对铁轨两侧的应力添加MPa单位，这样导致了TextView变长，铁轨错位；因此调整布局文件，使铁轨不会因为应力数据的变长而错位。

--- a/res/layout/tabhome.xml
+++ b/res/layout/tabhome.xml
@@ -21,10 +21,11 @@
         title:title_text_color="@color/white" >
     </com.terrytec.brokenrailmonitor.CustomTitleBar>
 
-    <RelativeLayout
+<!--     <RelativeLayout >下面的控件本来是这个 ，需要恢复里面的注释</RelativeLayout> -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <LinearLayout
             android:id="@+id/llFunctionButtons"
@@ -58,9 +59,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
-            android:gravity="center" 
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/llFunctionButtons">
+            android:gravity="center" >
+<!--             android:layout_centerHorizontal="true" -->
+<!--             android:layout_below="@id/llFunctionButtons"> -->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -84,6 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_marginStart="-20dp"
                     android:orientation="vertical" >
                 </LinearLayout>
 
@@ -99,6 +101,6 @@
                 </Button>
             </LinearLayout>
         </ScrollView>
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
